--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,14 @@ code {
 }
 
 .notes-list{
-  
+  display:grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
 }
 
 
 .note{
   background-color:#fffbd4;
-  margin-bottom:10px;
   border-radius: 10px;
   padding:1rem;
   min-height: 170px;
