--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,16 @@ code {
     monospace;
 }
 
+.container {
+  max-width:82.5%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .notes-list{
   display:grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  grid-gap: 1.25rem;
+  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
 }
 
 
