--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ code {
   max-width:82.5%;
   margin-right: auto;
   margin-left: auto;
+  height:100vh;
 }
 
 .notes-list{
@@ -59,8 +60,8 @@ textarea:focus{
   font-size: 1rem;
   background-color: #fbfbfb;
   border:none;
-  border-radius:1rem;
-  padding: .6rem .8rem;
+  border-radius:15px;
+  padding: 12px 15px;
   box-shadow:  4px 4px 6px #bae0ba,
              -4px -4px 8px #ebffeb;
 }
@@ -94,4 +95,39 @@ textarea:focus{
 
 .search-input:focus{
   outline:none;
+}
+
+.header{
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+}
+
+.togg-btn{
+  font-size: 1rem;
+  background-color:rgb(245, 245, 245);
+  border:none;
+  border-radius:15px;
+  padding: 12px 15px;
+  cursor: pointer;
+}
+
+.dark-mode{
+  background-color:#212121;
+}
+
+.dark-mode h1{
+  color:white;
+}
+
+.dark-mode .search{
+  background-color:#505050;
+}
+
+.dark-mode .search-icon{
+  color:white;
+}
+
+.dark-mode .search-input{
+  color:white;
 }
