--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inter',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1{
+  font-size:2.5rem;
+}
+
+*{
+  font-size: 1.1rem;
+}
+
+small{
+  font-size:.9rem;
 }
 
 .container {
@@ -33,6 +40,7 @@ textarea{
   border:none;
   resize:none;
   background:none;
+  font-family:'Inter',sans-serif;
 }
 
 textarea:focus{
@@ -40,7 +48,7 @@ textarea:focus{
 }
 
 .note{
-  background-color:#fffbd4;
+  background-color:#fffacc;
   border-radius: 10px;
   padding:1rem;
   min-height: 170px;
@@ -89,6 +97,7 @@ textarea:focus{
 }
 
 .search-input{
+  flex: 1;
   border:none;
   background:none;
 }
@@ -129,5 +138,21 @@ textarea:focus{
 }
 
 .dark-mode .search-input{
+  color:white;
+}
+
+.dark-mode .note{
+  background-color:#fff68d;
+}
+
+.dark-mode .note.new{
+  background-color:#c2ffc2
+}
+
+.dark-mode .togg-btn{
+  background-color:#505050;
+}
+
+.dark-mode .sun-icon{
   color:white;
 }
